Intro , About ,Latest Work Section completed

--- a/index.html
+++ b/index.html
@@ -4,9 +4,70 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Website</title>
+
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <!-- Manu bar -->
+    <section class="top-manu">
+        <ul>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Work</a></li>
+            <li><a href="#">Portfolio</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+    </section>
+    <!-- Intro Section -->
+    <section class="intro">
+        <div class="intro-half">
+            <h1>HELLO I'M</h1>
+            <h1 class="hight-light">Sontus Chandra Anik</h1>
+            <p>A fullstack web application developer</p>
+            <a href="https://www.linkedin.com/in/sontus-chandra-anik/" class="action-button" target="_blank">HARE ME</a>
+        </div>
+        <div class="intro-half">
+            <img src="images/intro.png" alt="intro">
+        </div>
+    </section>
+    <!-- About  -->
+    <section class="about">
+        <div class="intro-half">
+            <img src="images/about.png" alt="intro">
+        </div>
+        <div class="intro-half">
+            <h2> ABOUT</h2>
+            <P>Hi I am Sontus Chandra Anik. Experienced Computer Programmer with a demonstrated history of working in the computer software industry. Skilled in HTML5,CSS3, Bootstrap, JavaScript,PHP, Laravel, RESTAPI, Lumen, Vue Js And WordPress. Strong engineering professional with a Diploma focused in Computer Science from Mymensingh Polytechnic Institute. </P>
+            <a href="https://www.linkedin.com/in/sontus-chandra-anik/" class="action-button" target="_blank">Download CV</a>
+        </div>
+    </section>
+    <!-- Latest Work -->
+    <section class="latest-work">
+        <h2> <span>Latest</span> Working Project</h2>
+        <div class="work-box">
+            <img src="images/image 4.png" alt="Project Image">
+            <h5>Power-x-gym (Gym Website)</h5>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
+        </div>
+        <div class="work-box">
+            <img src="images/image 5.png" alt="Project Image">
+            <h5>Creative Agency</h5>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
+        </div>
+        <div class="work-box">
+            <img src="images/image 8.png" alt="Project Image">
+            <h5>Hard Rock Music</h5>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
+        </div>
+    </section>
+    <!-- Work inquiry -->
+    <section class="inquiry">
+        <img src="images/inquiry.png" alt="">
+        <div>
+            <h2>WORK INQUIRY</h2>
+            <a href="#">Let's Chat</a>
+        </div>
+    </section>
 </body>
 </html>
