Query , Contact , Footer Section completed

--- a/index.html
+++ b/index.html
@@ -63,11 +63,30 @@
     </section>
     <!-- Work inquiry -->
     <section class="inquiry">
-        <img src="images/inquiry.png" alt="">
         <div>
-            <h2>WORK INQUIRY</h2>
-            <a href="#">Let's Chat</a>
+            <h2 class="quiry-text">WORK INQUIRY</h2>
+            <a href="#" class="quiry-button">Let's Chat</a>
         </div>
     </section>
+    <!-- contact -->
+    <section class="contact">
+        <h3>Contact With Me</h3>
+        <div class="contact-box">
+            <input type="text" placeholder="Full Name">
+            <input type="text" placeholder="Phone Number">
+            <input type="text" placeholder="Email Address">
+            <textarea name="" id="" cols="30" rows="10"></textarea>
+            <a href="#" class="contact-button">Send Message</a>
+        </div>
+    </section>
+    <div class="footer">
+        <h6>STAY CONNECTED</h6>
+        <h3>info.sontus@gmail.com</h3>
+        <ul>
+            <li><a href=""><img src="icons/image 6.png" alt=""></a></li>
+            <li><a href=""><img src="icons/Group 33059.png" alt=""></a></li>
+            <li><a href=""><img src="icons/image 7.png" alt=""></a></li>
+        </ul>
+    </div>
 </body>
 </html>
