--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Website</title>
 
+    <!-- <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet"> -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
@@ -24,7 +26,7 @@
         <div class="intro-half">
             <h1>HELLO I'M</h1>
             <h1 class="hight-light">Sontus Chandra Anik</h1>
-            <p>A fullstack web application developer</p>
+            <p>A fullstack web application developer.Skilled in HTML5,CSS3, Bootstrap, JavaScript</p>
             <a href="https://www.linkedin.com/in/sontus-chandra-anik/" class="action-button" target="_blank">HARE ME</a>
         </div>
         <div class="intro-half">
@@ -70,7 +72,7 @@
     </section>
     <!-- contact -->
     <section class="contact">
-        <h3>Contact With Me</h3>
+        <h3><span class="hight-light">Contact</span> With Me</h3>
         <div class="contact-box">
             <input type="text" placeholder="Full Name">
             <input type="text" placeholder="Phone Number">
