--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <section class="inquiry">
         <div>
             <h2 class="quiry-text">WORK INQUIRY</h2>
-            <a href="#" class="quiry-button">Let's Chat</a>
+            <a href="https://www.linkedin.com/in/sontus-chandra-anik/" class="quiry-button">Let's Chat</a>
         </div>
     </section>
     <!-- contact -->
@@ -78,7 +78,7 @@
             <input type="text" placeholder="Phone Number">
             <input type="text" placeholder="Email Address">
             <textarea name="" id="" cols="30" rows="10"></textarea>
-            <a href="#" class="contact-button">Send Message</a>
+            <a href="https://www.linkedin.com/in/sontus-chandra-anik/" class="contact-button">Send Message</a>
         </div>
     </section>
     <div class="footer">
